--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,10 @@ hex-literal = "0.4.1"
 gsdk = "1.1.1"
 gclient = "1.1.1"
 gear-core = "1.1.1"
-ai-nft-io = { git = "https://github.com/gear-foundation/nft-marketplace.git", branch = "tm-ai-nft" }
+# ai-nft-io = { git = "https://github.com/gear-foundation/nft-marketplace.git", branch = "tm-ai-nft" }
 ipfs-api-backend-hyper = { version = "0.6", features = ["with-hyper-rustls", "with-send-sync"], default-features = false }
 tch = "0.13"
 torch-sys = { version = "0.13", features = ["download-libtorch"] }
+parity-scale-codec = { version = "3.6.4", default-features = false, features = ["derive"] }
+primitive-types = { version = "0.12.2", default-features = false, features = ["scale-info"] }
+scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
